# Academy-Website

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
demos/: style-1-faithful.html  style-2-soft-minimal.html  style-3-bold-editorial.html  style-4-youtube.html
migrations/: 001_init.sql
src/: html.rs  main.rs  model.rs
static/: admin.js  board.js  style.css  tracker.js
static/demos/en/: authentication-demo.html  backend-frontend-demo.html  database-demo.html  html-css-js-demo.html  package-manager-demo.html  ui-ux-demo.html
static/demos/en/ai-timeline/: 01-origins.html  02-learning.html  03-dropout.html  04-generative.html  index.html
static/demos/tr/: authentication-demo.html  backend-frontend-demo.html  database-demo.html  html-css-js-demo.html  package-manager-demo.html  ui-ux-demo.html
static/demos/tr/ai-timeline/: 01-origins.html  02-learning.html  03-dropout.html  04-generative.html  index.html
